--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,11 @@ body {
   margin: 0 auto;
 }
 
+.gallery img {
+            width: 200px; /* Пример размера изображения в галерее */
+            cursor: pointer;
+        }
+
 .gallery-row {
   display: flex;
   overflow: hidden;
@@ -550,10 +555,47 @@ body {
   .footer p {
     font-size: 0.9rem;
   }
-  .modal-content {
-    max-width: 90%;
-    max-height: 70%;
-  }
+ .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            max-width: 80%;
+            max-height: 80%;
+            transform: scale(0); /* Начальное состояние: уменьшено */
+            transition: transform 0.3s ease-in-out; /* Плавная анимация масштабирования */
+        }
+
+        .modal.active .modal-content {
+            transform: scale(1); /* Конечное состояние: нормальный размер */
+        }
+
+        .close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #fff;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
 }
 
 @keyframes shimmer-horizontal {
